<resources>
    <string name="app_name" translatable="false">LupusInCampus</string>
    <string name="exit_btn_txt">ESCI</string>
    <string name="setting_btn_txt">IMPOSTAZIONI</string>
    <string name="rules_btn_txt">REGOLE DEL GIOCO</string>
    <string name="play_btn_text">GIOCA</string>
    <string name="icona_profilo_desc_txt">icona_profilo_desc</string>
    <string name="username" translatable="false">User</string>
    <string name="area_utente_btn_txt">Area Utente</string>
    <string name="lista_amici_btn_txt">Lista Amici</string>
    <string name="lista_inviti_btn_txt">Lista Inviti</string>
    <string name="back_btn_txt">INDIETRO</string>
    <string name="username_lista_amici" translatable="false">UserName</string>
    <string name="aggiungi_amico_btn_txt">AGGIUNGI AMICO</string>
    <string name="Login">LOGIN</string>
    <string name="action_sign_in">Entra o registrati</string>
    <string name="action_sign_in_short">Entra </string>
    <string name="welcome">"Benvenuto!"</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">La password deve contenere più di 5 caratteri</string>
    <string name="login_failed">"Accesso fallito"</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="registrati">Registrati</string>
    <string name="mondo">MONDO</string>
    <string name="email_o_nickname" translatable="false">Email...</string>
    <string name="crea_partita">CREA PARTITA</string>
    <string name="Mostralobby">MOSTRA LOBBY</string>
    <string name="indietro">INDIETRO</string>
    <string name="inserire_nuova_password">Inserire nuova password</string>
    <string name="conferma_nuova_password">Conferma nuova password</string>
    <string name="resetta_password">Resetta Password</string>
    <string name="password" translatable="false">Password...</string>
    <string name="Nuova_password">Reimposta password</string>
    <string name="nickname" translatable="false">Nickname</string>
    <string name="email" translatable="false">Email</string>
    <string name="logout_btn_text">LOGOUT</string>
    <string name="regole_label_txt">REGOLE</string>
    <string name="ruoli_label_txt">RUOLI</string>
    <string name="inizia_partita">INIZIA PARTITA</string>
    <string name="esci_dalla_lobby">ESCI DALLA LOBBY</string>
    <string name="invita_amici">invita amici</string>
    <string name="in_attesa_che_entrino_tutti_i_giocatori">In attesa che entrino tutti i giocatori…</string>
    <string name="Regole">
        <b>Obiettivo del Gioco</b>\nI giocatori sono divisi in due fazioni: lupi mannari e villaggio.\nI lupi devono eliminare tutti i cittadini senza farsi scoprire.\nIl villaggio deve individuare ed eliminare i lupi prima che sia troppo tardi.\n\n
        <b>Preparazione</b>\nOgni giocatore si connette alla partita.\nL’app assegna automaticamente un ruolo segreto a ciascun partecipante.\nIl gioco si svolge alternando notte e giorno.\n\n
        
        <b>Fase Notturna</b>\nTutti i giocatori entrano nella modalità notte e non possono comunicare.\nI lupi mannari vedono i loro compagni e votano segretamente un giocatore da eliminare.\nLe figure speciali (come Veggente o Protettore)potranno usare la loro abilità.\nLa notte termina e inizia il giorno.\n\n
        
        <b>Fase Diurna</b>\nIl narratore annuncia chi è stato eliminato durante la notte.\nI giocatori discutono su chi possa essere un lupo.\nSi avvia una fase di votazione: ogni giocatore vota un sospettato.\nIl giocatore più votato viene eliminato e il suo ruolo viene rivelato.\nSe la partita non è ancora finita, inizia una nuova notte.\n\n
        
        <b>Condizioni di Vittoria</b>\nI lupi vincono se il numero di lupi è uguale o superiore a quello dei cittadini.\nIl villaggio vince se tutti i lupi sono stati eliminati.
</string>
    <string name="richiesta_amicizia">Richieste di amicizia</string>
    <string name="Effetti_setting_txt">Effetti</string>
    <string name="musica_setting_txt">Musica</string>
    <string name="lingua_setting_txt">Lingua</string>
    <string name="history_of_games">Storico partite</string>
    <string name="hint_nickname_aggiungi_amico">Inserire nickname giocatore</string>
    <string name="cerca_amico_icon_desc_txt">cerca_amico_icon</string>
    <string name="aggiuni_giocatore_item_btn_txt">AGGIUNGI</string>
    <string name="scrivi_un_messaggio">Scrivi un messaggio...</string>
    <string name="invia">Invia</string>
    <string name="entra_in_lobby">Entra in lobby</string>
    <string name="crea_lobby">CREA LOBBY</string>
    <string name="scegli_il_tipo_di_lobby">Scegli il tipo di lobby</string>
    <string name="conferma_voto_btn_txt">Conferma Voto</string>
    <string name="skip_btn_txt">Saltare</string>

</resources>