<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MainPageTextViewStyle"
    android:background="@drawable/sfondo"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_btn_txt"
        android:textColor="@color/text_red"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/rules_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setting_btn"/>

    <TextView
        android:id="@+id/setting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exit_btn"/>

    <TextView
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_btn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rules_btn"/>

    <include
        android:id="@+id/include_profile_main"
        layout="@layout/profile_icon_layout" />

    <include
        android:id="@+id/profile_sidebar_main"
        layout="@layout/profile_sidebar" />



</androidx.constraintlayout.widget.ConstraintLayout>