<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_sidebar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent="0.25"
        android:background="@color/opaque_white"
        android:theme="@style/MainPageSidebarTextViewStyle"
        android:text="@string/username"
        android:layout_margin="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/profile_img_sdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icona_profilo_inverted"
            android:background="@null"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/username_sdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/profile_img_sdb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/area_utente_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/area_utente_btn_txt"
            app:layout_constraintTop_toBottomOf="@id/username_sdb" />

        <TextView
            android:id="@+id/richiesta_amicizia_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/richiesta_amicizia"
            app:layout_constraintTop_toBottomOf="@id/lista_amici_btn"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/lista_amici_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/lista_amici_btn_txt"
            app:layout_constraintTop_toBottomOf="@id/area_utente_btn"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/lista_inviti_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_inviti_btn_txt"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/richiesta_amicizia_btn"/>

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_btn_text"
            android:textAlignment="center"
            android:textColor="@color/text_red"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>