<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!-- Left Side Panel -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/panna"
            android:gravity="center_vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvAppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nuova_password"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text"/>

                <EditText
                    android:id="@+id/new_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:hint="@string/inserire_nuova_password" />

                <EditText
                    android:id="@+id/confirm_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/conferma_nuova_password"
                    android:minHeight="48dp" />

                <Button
                    android:id="@+id/btnResetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/text_red"
                    android:text="@string/resetta_password" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:scaleType="fitCenter"/>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/back_btn"
        layout="@layout/back_btn_layout_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        tools:ignore="IncludeLayoutParam" />
</RelativeLayout>
