<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="20dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/username_lista_amici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_lista_amici"
        android:textSize="23sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/aggiungi_giocatore_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/panna"
        app:cardElevation="4dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aggiuni_giocatore_item_btn_txt"
                android:textSize="23sp"
                android:textColor="@android:color/black"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/aggiungi_giocatore_icon"
                android:contentDescription="@string/aggiungi_amico_btn_txt"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>